# evoli-assignment

./: .gitignore  README.md  config.dhall  evoli-assignment.cabal  hie.yaml
app/: Main.hs
src/Evoli/Assignment/: Config.hs  Main.hs  Model.hs  UseCase.hs
src/Evoli/Assignment/Adapters/: Servant.hs  Sqlite.hs
src/Evoli/Assignment/Adapters/Servant/: API.hs  Config.hs
src/Evoli/Assignment/Adapters/Sqlite/: Config.hs  Connection.hs  Handler.hs  Model.hs
src/Evoli/Assignment/Interfaces/: Storage.hs
src/Evoli/Assignment/Model/: Types.hs  Validation.hs
test/: Main.hs  Spec.hs
test/Evoli/Assignment/: ExternalSpec.hs  UseCaseSpec.hs
test/Evoli/Assignment/Adapters/: ServantSpec.hs  SqliteSpec.hs
